# lttng-consume

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES  LICENSE  NOTICE.md  README.md  TODO  azure-pipelines.yml
cmake/modules/: Findbabeltrace.cmake  Findbabeltrace2.cmake  Finduuid.cmake  lttng-consumeConfig.cmake
include/lttng-consume/: LttngConsumer.h
src/: BabelPtr.h  CMakeLists.txt  FailureHelpers.h  JsonBuilderSink.cpp  JsonBuilderSink.h  LttngConsumer.cpp  LttngConsumerImpl.cpp  LttngConsumerImpl.h  LttngJsonReader.cpp  LttngJsonReader.h
test/: CMakeLists.txt  Test-Tracepoint.cpp  Test-Tracepoint.h  TestTraceLogging.cpp  TestTraceLoggingKeywords.cpp  TestTracepoint.cpp
